# overfit-duplex

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: plan.md
asset/: README.md
asset/csv/: single_sample_x1.csv  single_sample_x16.csv
asset/mimi_audio_embeddings/: mimi_codebook_embeddings_32q.pt  mimi_projected_embeddings_32q.pt
src/dataset_utils/: data_models.py  data_postprocessing.py  duplex.py
src/mimi/: export_audio_embedding.py  feature_extraction.py
src/notebooks/: dataset_explore.ipynb  duplex_decode.ipynb  llama_model_variants.ipynb  mimi_feature_exploration.ipynb  model_decode.ipynb  project_root.py  torchtune_model_weights.ipynb
src/overfit_trial/: AGENTS.md  README.md  checkpoint_utils.py  data_factory.py  data_models.py  inference.py  loss_factory.py  model.py  model_factory.py  model_utils.py  optimizer_factory.py  pair_dataset.py  train.py  training_config.py
src/overfit_trial/test_scripts/: duplex_model_forward_pass.py  test_pair_dataset.py  test_sampling.py
